# zero2prod

./: .env  Cargo.toml  Dockerfile
migrations/: 20250402025735_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
